--- a/index.html
+++ b/index.html
@@ -9,4 +9,39 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <style>
+    html{
+      height: 100%;
+      width: 100%;
+      min-width: 1100px;
+      /* overflow-x: scroll; */
+      /* overflow-y: hidden; */
+      -moz-osx-font-smoothing: grayscale;
+      font-family:'DINPro' !important;
+    }
+    html::-webkit-scrollbar {
+      width: 4px;
+      border-radius: 50px;
+    }
+    html::-webkit-scrollbar-track{
+      background-color: #e0e0e0;
+      /* border-radius: 50px; */
+    }
+    html::-webkit-scrollbar-thumb{
+      background-color: #b3b3b3;
+      /* border-radius: 50px; */
+    }
+    html::-webkit-scrollbar-thumb:hover{
+      background-color:  #b3b3b3;
+      /* border-radius: 50px; */
+    }
+    html::-webkit-scrollbar-thumb:active{
+      background-color: #b3b3b3;
+      /* border-radius: 50px; */
+    }
+    html::-webkit-scrollbar-thumb:active{
+      background-color: #e0e0e0;
+      /* border-radius: 50px; */
+    }
+  </style>
 </html>
