--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     html{
       height: 100%;
       width: 100%;
-      min-width: 1100px;
+      /* min-width: 1100px; */
       /* overflow-x: scroll; */
       /* overflow-y: hidden; */
       -moz-osx-font-smoothing: grayscale;
