--- a/login-by-hospital.html
+++ b/login-by-hospital.html
@@ -1,4 +1,3 @@
 <script>
-    alert(window.location.href.split("?")[1])
-    window.location.href="http://192.168.2.46:9091/#/login?"+window.location.href.split("?")[1];
+    window.location.href="index.html#/login?"+window.location.href.split("?")[1];
 </script>
