--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>医品通医院后台管理系统</title>
+    <title>医品通 - 医院运维</title>
+    <!-- <link rel="icon" href="./static/logo.ico" type="image/x-icon" sizes="32x32"/>  -->
     <script src="https://cdn.bootcss.com/moment.js/2.24.0/moment.min.js"></script>
     <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
   </head>
   <body>
     <div id="app"></div>
+    <!-- <img src="./static/logo.ico" alt=""> -->
     <!-- built files will be auto injected -->
   </body>
   <style>
